Clase10/Lab6/PCompi2N/pcompi2n_parser.go
// Code generated from PCompi2N.g4 by ANTLR 4.13.0. DO NOT EDIT.

package PCompi2N // PCompi2N
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PCompi2NParser struct {
	*antlr.BaseParser
}

var PCompi2NParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pcompi2nParserInit() {
	staticData := &PCompi2NParserStaticData
	staticData.LiteralNames = []string{
		"", "'if'", "'else'", "'switch'", "'{'", "'}'", "'case'", "'->'", "'default'",
		"'sentencia'", "'!'", "'true'", "'false'", "'<'", "'>'", "'=='", "'!='",
		"'<='", "'>='", "'AND'", "'OR'", "'-'", "'*'", "'/'", "'+'", "')'",
		"'('",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "PARDER", "PARIZQ", "ENTERO", "DECIMAL",
		"ENBLANCO", "ID",
	}
	staticData.RuleNames = []string{
		"s", "if", "switch", "case", "defaultc", "blockS", "sentencia", "cond",
		"expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PCompi2NParserInit initializes any static state used to implement PCompi2NParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPCompi2NParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PCompi2NParserInit() {
	staticData := &PCompi2NParserStaticData
	staticData.once.Do(pcompi2nParserInit)
}

// NewPCompi2NParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPCompi2NParser(input antlr.TokenStream) *PCompi2NParser {
	PCompi2NParserInit()
	this := new(PCompi2NParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PCompi2NParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PCompi2N.g4"

	return this
}

// PCompi2NParser tokens.
const (
	PCompi2NParserEOF      = antlr.TokenEOF
	PCompi2NParserT__0     = 1
	PCompi2NParserT__1     = 2
	PCompi2NParserT__2     = 3
	PCompi2NParserT__3     = 4
	PCompi2NParserT__4     = 5
	PCompi2NParserT__5     = 6
	PCompi2NParserT__6     = 7
	PCompi2NParserT__7     = 8
	PCompi2NParserT__8     = 9
	PCompi2NParserT__9     = 10
	PCompi2NParserT__10    = 11
	PCompi2NParserT__11    = 12
	PCompi2NParserT__12    = 13
	PCompi2NParserT__13    = 14
	PCompi2NParserT__14    = 15
	PCompi2NParserT__15    = 16
	PCompi2NParserT__16    = 17
	PCompi2NParserT__17    = 18
	PCompi2NParserT__18    = 19
	PCompi2NParserT__19    = 20
	PCompi2NParserT__20    = 21
	PCompi2NParserT__21    = 22
	PCompi2NParserT__22    = 23
	PCompi2NParserT__23    = 24
	PCompi2NParserPARDER   = 25
	PCompi2NParserPARIZQ   = 26
	PCompi2NParserENTERO   = 27
	PCompi2NParserDECIMAL  = 28
	PCompi2NParserENBLANCO = 29
	PCompi2NParserID       = 30
)

// PCompi2NParser rules.
const (
	PCompi2NParserRULE_s         = 0
	PCompi2NParserRULE_if        = 1
	PCompi2NParserRULE_switch    = 2
	PCompi2NParserRULE_case      = 3
	PCompi2NParserRULE_defaultc  = 4
	PCompi2NParserRULE_blockS    = 5
	PCompi2NParserRULE_sentencia = 6
	PCompi2NParserRULE_cond      = 7
	PCompi2NParserRULE_expr      = 8
)

// ISContext is an interface to support dynamic dispatch.
type ISContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	If_() IIfContext
	EOF() antlr.TerminalNode
	Cond() ICondContext
	Switch_() ISwitchContext

	// IsSContext differentiates from other interfaces.
	IsSContext()
}

type SContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySContext() *SContext {
	var p = new(SContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_s
	return p
}

func InitEmptySContext(p *SContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_s
}

func (*SContext) IsSContext() {}

func NewSContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SContext {
	var p = new(SContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_s

	return p
}

func (s *SContext) GetParser() antlr.Parser { return s.parser }

func (s *SContext) If_() IIfContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfContext)
}

func (s *SContext) EOF() antlr.TerminalNode {
	return s.GetToken(PCompi2NParserEOF, 0)
}

func (s *SContext) Cond() ICondContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICondContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *SContext) Switch_() ISwitchContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISwitchContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISwitchContext)
}

func (s *SContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterS(s)
	}
}

func (s *SContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitS(s)
	}
}

func (s *SContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitS(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) S() (localctx ISContext) {
	localctx = NewSContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PCompi2NParserRULE_s)
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PCompi2NParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(18)
			p.If_()
		}
		{
			p.SetState(19)
			p.Match(PCompi2NParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PCompi2NParserT__9, PCompi2NParserT__10, PCompi2NParserT__11, PCompi2NParserT__20, PCompi2NParserPARIZQ, PCompi2NParserENTERO, PCompi2NParserID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(21)
			p.cond(0)
		}
		{
			p.SetState(22)
			p.Match(PCompi2NParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PCompi2NParserT__2:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(24)
			p.Switch_()
		}
		{
			p.SetState(25)
			p.Match(PCompi2NParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IIfContext is an interface to support dynamic dispatch.
type IIfContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsIfContext differentiates from other interfaces.
	IsIfContext()
}

type IfContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIfContext() *IfContext {
	var p = new(IfContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_if
	return p
}

func InitEmptyIfContext(p *IfContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_if
}

func (*IfContext) IsIfContext() {}

func NewIfContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IfContext {
	var p = new(IfContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_if

	return p
}

func (s *IfContext) GetParser() antlr.Parser { return s.parser }

func (s *IfContext) CopyAll(ctx *IfContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *IfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type IFsenContext struct {
	IfContext
}

func NewIFsenContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IFsenContext {
	var p = new(IFsenContext)

	InitEmptyIfContext(&p.IfContext)
	p.parser = parser
	p.CopyAll(ctx.(*IfContext))

	return p
}

func (s *IFsenContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IFsenContext) Cond() ICondContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICondContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *IFsenContext) AllBlockS() []IBlockSContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBlockSContext); ok {
			len++
		}
	}

	tst := make([]IBlockSContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBlockSContext); ok {
			tst[i] = t.(IBlockSContext)
			i++
		}
	}

	return tst
}

func (s *IFsenContext) BlockS(i int) IBlockSContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockSContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockSContext)
}

func (s *IFsenContext) If_() IIfContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfContext)
}

func (s *IFsenContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterIFsen(s)
	}
}

func (s *IFsenContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitIFsen(s)
	}
}

func (s *IFsenContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitIFsen(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) If_() (localctx IIfContext) {
	localctx = NewIfContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PCompi2NParserRULE_if)
	var _la int

	localctx = NewIFsenContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.Match(PCompi2NParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(30)
		p.cond(0)
	}
	{
		p.SetState(31)
		p.BlockS()
	}
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PCompi2NParserT__1 {
		{
			p.SetState(32)
			p.Match(PCompi2NParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case PCompi2NParserT__0:
			{
				p.SetState(33)
				p.If_()
			}

		case PCompi2NParserT__3:
			{
				p.SetState(34)
				p.BlockS()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISwitchContext is an interface to support dynamic dispatch.
type ISwitchContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expr() IExprContext
	AllCase_() []ICaseContext
	Case_(i int) ICaseContext
	Defaultc() IDefaultcContext

	// IsSwitchContext differentiates from other interfaces.
	IsSwitchContext()
}

type SwitchContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySwitchContext() *SwitchContext {
	var p = new(SwitchContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_switch
	return p
}

func InitEmptySwitchContext(p *SwitchContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_switch
}

func (*SwitchContext) IsSwitchContext() {}

func NewSwitchContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SwitchContext {
	var p = new(SwitchContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_switch

	return p
}

func (s *SwitchContext) GetParser() antlr.Parser { return s.parser }

func (s *SwitchContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *SwitchContext) AllCase_() []ICaseContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICaseContext); ok {
			len++
		}
	}

	tst := make([]ICaseContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICaseContext); ok {
			tst[i] = t.(ICaseContext)
			i++
		}
	}

	return tst
}

func (s *SwitchContext) Case_(i int) ICaseContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICaseContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICaseContext)
}

func (s *SwitchContext) Defaultc() IDefaultcContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDefaultcContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDefaultcContext)
}

func (s *SwitchContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SwitchContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SwitchContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterSwitch(s)
	}
}

func (s *SwitchContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitSwitch(s)
	}
}

func (s *SwitchContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitSwitch(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) Switch_() (localctx ISwitchContext) {
	localctx = NewSwitchContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PCompi2NParserRULE_switch)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)
		p.Match(PCompi2NParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(40)
		p.expr(0)
	}
	{
		p.SetState(41)
		p.Match(PCompi2NParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == PCompi2NParserT__5 {
		{
			p.SetState(42)
			p.Case_()
		}

		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PCompi2NParserT__7 {
		{
			p.SetState(48)
			p.Defaultc()
		}

	}
	{
		p.SetState(51)
		p.Match(PCompi2NParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICaseContext is an interface to support dynamic dispatch.
type ICaseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expr() IExprContext
	BlockS() IBlockSContext

	// IsCaseContext differentiates from other interfaces.
	IsCaseContext()
}

type CaseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCaseContext() *CaseContext {
	var p = new(CaseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_case
	return p
}

func InitEmptyCaseContext(p *CaseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_case
}

func (*CaseContext) IsCaseContext() {}

func NewCaseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CaseContext {
	var p = new(CaseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_case

	return p
}

func (s *CaseContext) GetParser() antlr.Parser { return s.parser }

func (s *CaseContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *CaseContext) BlockS() IBlockSContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockSContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockSContext)
}

func (s *CaseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CaseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CaseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterCase(s)
	}
}

func (s *CaseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitCase(s)
	}
}

func (s *CaseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitCase(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) Case_() (localctx ICaseContext) {
	localctx = NewCaseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PCompi2NParserRULE_case)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(PCompi2NParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(54)
		p.expr(0)
	}
	{
		p.SetState(55)
		p.Match(PCompi2NParserT__6)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(56)
		p.BlockS()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDefaultcContext is an interface to support dynamic dispatch.
type IDefaultcContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	BlockS() IBlockSContext

	// IsDefaultcContext differentiates from other interfaces.
	IsDefaultcContext()
}

type DefaultcContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefaultcContext() *DefaultcContext {
	var p = new(DefaultcContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_defaultc
	return p
}

func InitEmptyDefaultcContext(p *DefaultcContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_defaultc
}

func (*DefaultcContext) IsDefaultcContext() {}

func NewDefaultcContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefaultcContext {
	var p = new(DefaultcContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_defaultc

	return p
}

func (s *DefaultcContext) GetParser() antlr.Parser { return s.parser }

func (s *DefaultcContext) BlockS() IBlockSContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockSContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockSContext)
}

func (s *DefaultcContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefaultcContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefaultcContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterDefaultc(s)
	}
}

func (s *DefaultcContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitDefaultc(s)
	}
}

func (s *DefaultcContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitDefaultc(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) Defaultc() (localctx IDefaultcContext) {
	localctx = NewDefaultcContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, PCompi2NParserRULE_defaultc)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(PCompi2NParserT__7)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(59)
		p.Match(PCompi2NParserT__6)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(60)
		p.BlockS()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockSContext is an interface to support dynamic dispatch.
type IBlockSContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsBlockSContext differentiates from other interfaces.
	IsBlockSContext()
}

type BlockSContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockSContext() *BlockSContext {
	var p = new(BlockSContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_blockS
	return p
}

func InitEmptyBlockSContext(p *BlockSContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PCompi2NParserRULE_blockS
}

func (*BlockSContext) IsBlockSContext() {}

func NewBlockSContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockSContext {
	var p = new(BlockSContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PCompi2NParserRULE_blockS

	return p
}

func (s *BlockSContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockSContext) CopyAll(ctx *BlockSContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *BlockSContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockSContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type BlockContext struct {
	BlockSContext
}

func NewBlockContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BlockContext {
	var p = new(BlockContext)

	InitEmptyBlockSContext(&p.BlockSContext)
	p.parser = parser
	p.CopyAll(ctx.(*BlockSContext))

	return p
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) Sentencia() ISentenciaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISentenciaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISentenciaContext)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PCompi2NListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PCompi2NVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PCompi2NParser) BlockS() (localctx IBlockSContext) {
	localctx = NewBlockSContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, PCompi2NParserRULE_blockS)
	var _la int

	localctx = NewBlockContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Match(PCompi2NParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)
